--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,22 @@ header {
     font-family: 'BravuraText';
     font-size: xx-large;
 }
+#notes {
+    height: 75vh;
+    width: 100%;
+}
+#nav {
+    height: 25vh;
+    width: 100%;
+}
+#nav > canvas {
+    position: relative;
+}
+#nav > svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 #legend li {
     cursor: pointer;
 }
