Add similar styling to #notes, to place an SVG on top of a canvas.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,14 @@ header {
     height: 25vh;
     width: 100%;
 }
+#notes > canvas {
+    position: relative;
+}
+#notes > svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 #nav > canvas {
     position: relative;
 }
